Add external MCP tool support